--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@ai-sdk/google": "^1.2.18",
     "@ai-sdk/openai": "^1.3.22",
     "@types/node": "^22.15.17",
+    "@types/progress": "^2.0.7",
     "ai": "^4.3.15",
     "autoevals": "^0.0.127",
+    "progress": "^2.0.3",
     "zod": "^3.24.4"
   }
 }
